<resources>
    <string name="app_name">English with Me!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="SelectActivity">
        <item>Main</item>
        <item>Lesson</item>
        <item>Test</item>
        <item>Mix Test</item>
        <item>Score</item>
        <item>Credit</item>
    </string-array>

    <string name="drawer_open">Open Navigation drawer</string>
    <string name="drawer_close">Close Navigation drawer</string>

    <string name="title_create_name">ตั้งชื่อตัวละคร</string>
    <string name="title_select_char">เลือกเพศตัวละคร</string>
    <string name="char_men">เพศชาย</string>
    <string name="char_women">เพศหญิง</string>
    <string name="char_create">สร้างตัวละคร</string>

    <string name="simple">Simple</string>

    <string name="notification_ticker_text">Test Notification</string>
    <string name="notification_content_text">yes</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string name="presim">Present Simple Test</string>

    <string name="enterName">โปรดใส่ชื่อตัวละคร</string>
    <string name="testAgain">กลับไปทวนบทเรียนอีกนิดนึงนะ</string>
    <string name="testPass">คุณสามารถเรียนบทเรียนถัดไปได้</string>

    <string name="tutorial11">เลือกเมนูที่คุณต้องการ</string>
    <string name="tutorial12">คุณสามารถเลือกเมนูได้ เพียงคุณกด icon มุมซ้ายด้านบน หรือ สไลด์นิ้วไปทางด้านขวาของจอ คุณก็จะพบกับเมนูให้คุณได้เลือกใช้</string>

    <string name="tutorial21">เลือกใช้งานได้ตามใจของคุณ</string>
    <string name="tutorial22">คุณสามารถเลือกเข้าศึกษาบทเรียนและทำแบบทดสอบได้ รวมถึงคุณสามารถตรวจสอบคะแนนของคุณได้</string>

    <string name="tutorial31">เรามีระบบพัฒนาเลเวลและระดับหัวใจตัวละครของคุณด้วย</string>
    <string name="tutorial32">  ตัวละครของคุณสามารถพัฒนาเลเวลได้จากการสอบและหากคุณผ่านแบบทดสอบทั้งหมดแล้วหัวใจจะสามารถเพิ่มลดได้ด้วย
        อย่าลืมทำแบบทดสอบให้ตัวละครของคุณพัฒนาล่ะ!</string>
    <string name="tutorial33">ระดับหัวใจเพิ่มลดได้นะ!</string>
    <string name="tutorial34">  อย่าลืมเข้ามาใช้งานแอพพลิเคชันบ่อยล่ะ ^^</string>

    <string name="tutorial41">เอาล่ะ...คุณพร้อมแล้วใช่ไหม?</string>
    <string name="tutorial42">มาเริ่มทำแบบทดสอบก่อนเรียนกันเถอะ! ^ ^</string>
    <string name="tutorial43">กดปุ่ม START เพื่อเริ่มแบบทดสอบ</string>

    <!--<string-array name="drawer_presim">-->
    <!--<item >@drawable/a1</item>-->
    <!--<item >@drawable/a21</item>-->
    <!--<item >@drawable/a22</item>-->
    <!--<item >@drawable/a3</item>-->
    <!--</string-array>-->
    <!--<integer-array name="drawer_presim2">-->
    <!--<item >@drawable/a1</item>-->
    <!--<item >@drawable/a21</item>-->
    <!--<item >@drawable/a22</item>-->
    <!--<item >@drawable/a3</item>-->
    <!--</integer-array>-->

</resources>
