<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d7ffca">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tutorial41" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tutorial42"
            android:padding="20dp"
            android:gravity="center"
            android:layout_margin="50dp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="START"
            android:id="@+id/button_startPre"
            android:background="#ff2d2d"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tutorial43"
            android:textSize="20dp"
            android:padding="8dp" />

    </LinearLayout>

</RelativeLayout>